Enhanced UI and Controller Changes